force-app/main/default/objects/Function__c/Function__c.object-meta.xml
<CustomObject>
    <description>This object represents the table of different functional stakeholder groups that work with SOS, i.e. Finance, Programme and has been created primarly as a table for Master Data management.</description>
    <label>Function</label>
    <nameField>
        <label>Function Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>