force-app/main/default/objects/Function__c/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <label>DUNS Number</label>
    <length>45</length>
    <type>Text</type>
</CustomField>