force-app/main/default/objects/Function__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <label>Legacy ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>