force-app/main/default/objects/Function__c/fields/Operating_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Operating_Unit_Number__c</fullName>
    <description>This is the coded acronym</description>
    <label>Operating Unit Number</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>