force-app/main/default/objects/Function__c/fields/Search_Name__c.field-meta.xml
<CustomField>
    <fullName>Search_Name__c</fullName>
    <description>This is the name shortened, is a legacy field and could probably be removed in the future</description>
    <label>Search Name</label>
    <length>45</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>