force-app/main/default/objects/Function__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <formula>&quot;F&quot; + LPAD(TEXT(Auto_Number__c), 7, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Name</label>
    <type>Text</type>
</CustomField>