force-app/main/default/objects/Function__c/recordTypes/Function.recordType-meta.xml
<RecordType>
    <fullName>Function</fullName>
    <active>true</active>
    <label>Function</label>
</RecordType>