force-app/main/default/objects/Function__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Search_Name__c</columns>
    <columns>Operating_Unit_Number__c</columns>
    <columns>Unique_Name__c</columns>
    <columns>Legacy_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>